# ListRanker

./: .gitignore  README.md  documentation.md  roadmap.md
.github/workflows/: rust.yml
backend/: .env  Cargo.toml  DOCKERFILE  Dockerfile  README.md  algo.md  db.txt  diesel.toml  item_service.rs  list_service.rs  rest_api.postman_collection.json  user_service.rs
backend/migrations/2024-10-10-212825_create_users/: down.sql  up.sql
backend/migrations/2024-10-14-100341_ranking/: down.sql  up.sql
backend/migrations/2024-10-16-124537_rankingitems/: down.sql  up.sql
backend/migrations/2024-10-18-123203_duel_table/: down.sql  up.sql
backend/src/: .env  data_creation.txt  db.rs  duel_service.rs  handlers.rs  item_service.rs  list_service.rs  main.rs  middleware.rs  models.rs  ranking_item_service.rs  ranking_service.rs  schema.rs  tournament_service.rs  user_service.rs  users.rs
backend/src/handlers/: duel_handlers.rs  items.rs  items_handlers.rs  lists.rs  lists_handlers.rs  ranking_items_handlers.rs  rankings_handlers.rs  tournament_handlers.rs  users.rs  users_handlers.rs
backend/src/models/: duel_models.rs  items.rs  items_models.rs  lists.rs  lists_models.rs  ranking_items_models.rs  rankings_models.rs  schema.rs  tournament_models.rs  users.rs  users_models.rs
backend/src/users/: routes.rs
docker/dev/: .env  docker-compose.yml
docker/prod/: docker-compose.yml
frontend/: .dockerignore  Dockerfile  Template.md  package.json
frontend/app/: ListsProvider.tsx  api.ts  (+5 more)
newfrontend/: package-lock.json
oldfrontend/: package-lock.json  package.json
(+78 files in other folders)
