[package]
name = "rankinglist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = '0.7'
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
syn = { version = "1.0.109", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.19"
