[package]
name = "rankinglist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.22"
rand = "0.8.5"
base64 = "0.22.1"

[build-dependencies]
libpq = "0.9"
