[package]
name = "list_ranker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.22"
rand = "0.8.5"
base64 = "0.22.1"
env_logger = "0.11.5"

[build-dependencies]
libpq = "0.9"

[[bin]]
name = "list_ranker"
path = "src/main.rs"